--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,12 @@
 <footer>
   <a href="https://github.com/di0n1xd">
-    <span>
-        <b>{{ site.owner}}</b>
-    </span>
-    {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
-    <span>© {{ currentyear }}</span>
+    <img src="../github.png"
+    width="35"
+    height="35">
+  </a>  
+  <a href="https://twitter.com/?lang=es">
+      <img src="../twitter.png"
+      width="35"
+      height="30">
   </a>
 </footer>
