--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <div>
     <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">
-    <h1>di0n1xd@KaliOS:~$</h1>
+    <h1>Informes</h1>
     </a>
     <div class="header-links">
       {% include links.html %}
